--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <div style="width: 120px; height: 55px;" >
           <a href="https://www.freecontractz.com/" >
             <img alt="Freecontractz" style="width: 150px; height: 50px !important; " 
-              src="/freecontractz.png" />
+              src="freecontractz.png" />
           </a>
         </div>
         <style>
