--- a/index.html
+++ b/index.html
@@ -756,6 +756,7 @@
             href="https://www.signwell.com/electronic-signature/" title="Free Electronic Signatures">free electronic
             signatures</a> in SignWell to instantly get your documents signed.
         </p>
+        <a href="edutempl/index.html"><p>Blog</p></a>
         <h4>Following Best Practices</h4>
         <p>
           Next, you'll want to ensure you follow some best practices around contracts and sales proposals.
