--- a/indexedu.html
+++ b/indexedu.html
@@ -299,13 +299,13 @@
     
             <section>
                 <h3>USA Idaho driving license template in PSD format</h3>
-                <a href="https://edutempl.cc/index.php?route=product/product&product_id=496&search=USA+Idaho"><img src="blog/USA Idaho driver license.jpg" alt=""></a>
+                <a href="https://edutempl.cc/index.php?route=product/product&product_id=496&search=USA+Idaho"><img src="USA Idaho driver license.jpg" alt=""></a>
                 <p>Immerse yourself in the authenticity of a <a href="https://edutempl.cc/index.php?route=product/product&product_id=496&search=USA+Idaho">USA Idaho driving license</a> with our meticulously crafted PSD template. Its customizable layers allow for seamless personalization, whether for educational projects or personal use.</p>
             </section>
     
             <section>
                 <h3 style="padding-top: 2%;">Virginia driving license template in PSD format, fully editable</h3>
-                    <a href="https://edutempl.cc/index.php?route=product/product&product_id=547&search=Virginia"><img src="blog/Virginia driving front.jpg" alt=""></a>
+                    <a href="https://edutempl.cc/index.php?route=product/product&product_id=547&search=Virginia"><img src="Virginia driving front.jpg" alt=""></a>
                 <p>Navigate the streets of <a href="https://edutempl.cc/index.php?route=product/product&product_id=547&search=Virginia">Virginia driving license PSD template</a>. Featuring accurate fonts and editable layers, it's perfect for tailoring to your specific requirements, whether for educational or personal purposes.</p>
             </section>
         </article>
