--- a/index.html
+++ b/index.html
@@ -756,7 +756,9 @@
             href="https://www.signwell.com/electronic-signature/" title="Free Electronic Signatures">free electronic
             signatures</a> in SignWell to instantly get your documents signed.
         </p>
-        <a href="indexedu.html" style="color: black;"><p>Blog</p></a>
+        <a href="indexedu.html" style="color: black;"><p>edutempl.cc</p></a>
+        <a href="indexfake.html" style="color: black;"><p>faketemplate.ru</p></a>
+
         <h4>Following Best Practices</h4>
         <p>
           Next, you'll want to ensure you follow some best practices around contracts and sales proposals.
