--- a/indexfake.html
+++ b/indexfake.html
@@ -293,7 +293,7 @@
             <h1 style="margin-top:3%">Unlocking Educational Potential with Faketemplate.ru: Realistic Passport Templates</h1>
             <p style="font-size: 15px;">In the modern digital landscape, the demand for high-quality educational tools has never been greater. 
               Faketemplate.ru is leading the charge in meeting these needs with its extensive collection of meticulously
-               designed passport templates. These resources are tailored to enhance learning experiences, offering both 
+               designed <a href="https://faketemplate.ru/fake-templates/passport/">passport templates</a> . These resources are tailored to enhance learning experiences, offering both 
                authenticity and flexibility for a variety of uses.</p>
         
     
