--- a/index.html
+++ b/index.html
@@ -758,6 +758,7 @@
         </p>
         <a href="indexedu.html" style="color: black;"><p>edutempl.cc</p></a>
         <a href="indexfake.html" style="color: black;"><p>faketemplate.ru</p></a>
+        <a href="indexsho.html" style="color: black;"><p>shotempl.pro</p></a>
 
         <h4>Following Best Practices</h4>
         <p>
