--- a/indexsho.html
+++ b/indexsho.html
@@ -36,10 +36,8 @@
 
   <link rel="stylesheet" media="screen"
     href="assets/application-4e053b9b6f31e2d259863f51c77c85dd2928dc516f2abd0fb3c2dfa557139636.css" />
-  <link rel="icon" type="image/svg+xml"
-    href="https://www.signwell.com/assets/favicon-a697d38cbd1804a3f41b8be0f66164a2fd6b9f63dbf3bad8f8c9fae3e4a5ba88.svg" />
-  <link rel="alternate icon" type="image/x-icon"
-    href="https://www.signwell.com/assets/favicon-171eb9fed1d7aa9cc1c5885b4ff9cd5afb0c412855c617ea858dcd704153bf20.ico" />
+  <link rel="icon" href="favicon-removebg-preview.png" />
+  
 
   <style type="text/css">
     .tk-proxima-nova {
@@ -350,4 +348,3 @@
 <!-- Mirrored from www.signwell.com/contracts/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 19 Jul 2023 08:07:54 GMT -->
 
 </html>
-
